# dictate

./: .env  README.md  pyproject.toml  requirements.txt
src/dictate/: cli.py  loading_indicator.py  server.py
src/vibevoice/: __init__.py  cli.py  loading_indicator.py  server.py
